fix: background image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 header {
-  background-image: url(/images/hero.jpg);
+  background-image: url(../images/hero.jpg);
   background-size: cover;
   color: white;
 }
